<resources>
    <string name="app_name">JobPortal</string>
    <string name="phone_no">phone_no</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="enter_last_name">enter_last_name</string>
    <string name="email">email</string>
    <string name="lets_get_started">lets_get_started</string>
    <string name="middle_name">middle_name</string>
    <string name="enter_first_name">enter_first_name</string>
    <string name="enter_middle_name">enter_middle_name</string>
    <string name="last_name">last_name</string>
    <string name="Continue">Continue</string>
    <string name="by_continuing_you_agree_to_our_terms_and_policy">by continuing you agree to our terms and policy</string>
    <string name="continue1">continue</string>
    <string name="login_to_handshake">login_to_handshake</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="login_as_an_applicant">login as an applicant</string>
    <string name="dont_have_an_account_sign_up">dont have an account sign up</string>
    <string name="phone_no1">Phone No.</string>
    <string name="password2">Password</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="enter_last_name1">Enter Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="lets_get_started1">Lets Get Started!!!</string>
    <string name="middle_name1">Middle Name</string>
    <string name="enter_first_name1">Enter First Name</string>
    <string name="enter_middle_name1">Enter Middle Name</string>
    <string name="last_name1">Last Name</string>
    <string name="create_new_job_post">create_new_job_post</string>
    <string name="enter_role">enter_role</string>
    <string name="job_description">job_description</string>
    <string name="enter_job_description">enter_job_description</string>
    <string name="requirements">requirements</string>
    <string name="enter_requirement">enter_requirement</string>
    <string name="application_deadline">application_deadline</string>
    <string name="estimated_start_date">estimated_start_date</string>
    <string name="job_title">job_title</string>
</resources>